--- a/miniprogram/pages/cards/cards.wxss
+++ b/miniprogram/pages/cards/cards.wxss
@@ -1,1 +1,10 @@
-/* pages/cards/cards.wxss */
+.title_css{
+  padding-top: 10vh;
+  padding-bottom: 5vh
+}
+
+
+.padding-tag-hc{
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
