--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,19 +1,58 @@
-/**app.wxss**/
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-} 
+@import 'colorui/icon.wxss';
+@import 'colorui/main.wxss';
 
-button {
-  background: initial;
+page {
+  background-color: #f8f8f8;
+  font-size: 16px;
+  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
 }
 
-button:focus{
-  outline: 0;
+.page__hd {
+  padding: 25px;
 }
 
-button::after{
-  border: none;
+.page__bd {
+  padding-bottom: 40px;
 }
+
+.page__bd_spacing {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page__ft {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.page__title {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.page__desc {
+  margin-top: 5px;
+  color: #888;
+  text-align: center;
+  font-size: 15px;
+}
+
+.page__exp {
+  margin-top: 5px;
+  color: #888;
+  font-style: oblique;
+  text-align: center;
+  font-size: 15px;
+}
+
+.dash-conj{
+  border-style:dashed none none none;
+  border-color:aqua;
+}
+
+.italic{
+  font-style:italic;
+  padding-bottom: 1px;
+}
+
