--- a/miniprogram/pages/revision/revision.wxss
+++ b/miniprogram/pages/revision/revision.wxss
@@ -1,1 +1,56 @@
-/* pages/revision/revision.wxss */
+.title_css{
+  padding-top: 20vh;
+  padding-bottom:80vh
+}
+
+.cu-form-group{
+    margin-right: 2vh;
+
+}
+
+.padding-tag-hc{
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
+
+.cu-bar{
+border-top-left-radius:30px;
+border-top-right-radius:30px;
+}
+
+.bg-white{
+border-bottom-left-radius:30px;
+border-bottom-right-radius:30px;
+}
+
+
+.cu-form-group{
+ border-color: blue; 
+  border-width: 2px; 
+  margin-left:     auto;
+  margin-right:     auto;
+}
+
+.padding{
+  border-color: red;
+  border-width: 2px;
+  margin:    auto;
+}
+
+.border-hc{
+  border-color: grey;
+  border-width: 1px;
+  border-style: solid ;
+  margin:    auto;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+}
+
+.cu-form-group-hc {
+	background-color: var(--white);
+	padding: 1rpx 30rpx;
+	display: flex;
+	align-items: center;
+	min-height: 80rpx;
+	justify-content: space-between;
+}
