--- a/miniprogram/pages/cards/cards.wxml
+++ b/miniprogram/pages/cards/cards.wxml
@@ -1,88 +1,37 @@
 <view class="bg-gradual-blue padding radius text-center shadow-blur title_css">
 
-
-  <view class="cu-bar bg-blue light solid-bottom margin-top">
-    <view class="flex padding justify-between">
-      <text class='text-center italic'>今天吃什么？</text>
+<!-- answer_array是一个二维数组，j是序号，i是一维数组、是答案。 -->
+  <view class="box" wx:for="{{answer_array}}" wx:for-item="i" wx:for-index="j" wx:key>
+    <view class="cu-bar bg-blue light solid-bottom margin-top ">
+      <view class="flex padding justify-between">
+<!-- question是问题数组，j只是一个序号。-->
+        <text class='text-center italic'>{{question[j]}}</text>    
+      </view>
+      <view class="flex padding justify-between">  <!-- 给每一个button加上id，这样就可以知道按的是哪个了-->
+        <button class='cu-btn lines-blue round shadow sm' bindtap="choose_it" id="{{j}}">
+          <view class='icon-roundcheck text-blue'></view>
+        </button>
+        <text decode="{{true}}">&nbsp;</text>
+        <button class='cu-btn bg-red round shadow sm' bindtap="revision_card" id="{{j}}">
+          <view class='icon-edit text-white'></view>
+        </button>
+        <text decode="{{true}}">&nbsp;</text>
+        <button class='cu-btn lines-red round shadow sm' bindtap="delete_card" id="{{j}}">
+          <view class='icon-delete text-red'></view>
+        </button>
+      </view>
     </view>
 
-    <view class="flex padding justify-between">
-      <button class='cu-btn bg-red round shadow sm' bindtap="revision_cards">编辑卡片</button>
-      <text decode="{{true}}">&nbsp;</text>
-      <button class='cu-btn lines-red round shadow sm' bindtap="bien_enregistre">
-        <view class='icon-delete text-red' bindtap='like_save' id='{{carte_number}}'></view>
-      </button>
+<!-- 下面的是白色面板，wx:for为上方的一维数组，item是一维数组里面的元素 -->
+    <view class='padding bg-white'>
+      <view class="padding">
+        <view class='cu-tag bg-green light round sm shadow padding-tag-hc' wx:for="{{i}}" wx:key>{{item}}</view>
+      </view>
     </view>
+
+
   </view>
 
-  <view class='padding bg-white'>
-
-
-
-
-    <view class="padding">
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_classic}}">典型动如果让他个热体词</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_selected}}">典型精v吴绿绿人选</view>
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_50}}">基础他特50</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_100}}">进阶让他个热体100</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_230}}">高手天热让他Bert230</view>
-    </view>
-
-  </view>
-
-  <view class="cu-bar bg-blue light solid-bottom margin-top">
-    <view class="flex padding justify-between">
-      <text class='text-center italic'>年会抽奖名单我</text>
-    </view>
-
-    <view class="flex padding justify-between">
-      <button class='cu-btn lines-blue round shadow sm' bindtap="choose_it">
-        <view class='icon-roundcheck text-blue'></view>
-      </button>
-      <text decode="{{true}}">&nbsp;</text>
-      <button class='cu-btn bg-red round shadow sm' bindtap="revision_cards">
-        <view class='icon-edit text-white'></view>
-      </button>
-      <text decode="{{true}}">&nbsp;</text>
-      <button class='cu-btn lines-red round shadow sm' bindtap="bien_enregistre">
-        <view class='icon-delete text-red'></view>
-      </button>
-    </view>
-  </view>
-
-  <view class='padding bg-white'>
-    <view class="padding">
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_classic}}">典型动如果让他个热体词</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_selected}}">典型精v吴绿绿人选</view>
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_50}}">基础他特50</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_100}}">进阶让他个热体100</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_230}}">高手天热让他Bert230</view>
-    </view>
-  </view>
-
-  <view class="cu-bar bg-blue light solid-bottom margin-top">
-    <view class="flex padding justify-between">
-      <text class='text-center italic'>今天谁来买单？</text>
-    </view>
-
-    <view class="flex padding justify-between">
-      <button class='cu-btn bg-red round shadow sm' bindtap="revision_cards">编辑卡片</button>
-      <text decode="{{true}}">&nbsp;</text>
-      <button class='cu-btn lines-red round shadow sm' bindtap="bien_enregistre">
-        <view class='icon-delete text-red' bindtap='like_save' id='{{carte_number}}'></view>
-      </button>
-    </view>
-  </view>
-
-  <view class='padding bg-white'>
-    <view class="padding">
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_classic}}">典型动如果让他个热体词</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_selected}}">典型精v吴绿绿人选</view>
-      <view class='cu-tag bg-green light round sm shadow padding-tag-hc' hidden="{{tag_50}}">基础他特50</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_100}}">进阶让他个热体100</view>
-      <view class='cu-tag bg-cyan light round sm shadow padding-tag-hc' hidden="{{tag_230}}">高手天热让他Bert230</view>
-    </view>
-  </view>
 
 
 </view>
