--- a/miniprogram/pages/cards/cards.wxml
+++ b/miniprogram/pages/cards/cards.wxml
@@ -8,16 +8,16 @@
         <text class='text-center italic'>{{question[j]}}</text>    
       </view>
       <view class="flex padding justify-between">  <!-- 给每一个button加上id，这样就可以知道按的是哪个了-->
-        <button class='cu-btn lines-blue round shadow sm' bindtap="choose_it" id="{{j}}">
-          <view class='icon-roundcheck text-blue'></view>
+        <button class="cu-btn {{change_choose_color[j]}} round shadow sm" bindtap="choose_it" id="{{j}}">
+          <view class="icon-roundcheck {{change_choose_icon_color[j]}}"></view>
         </button>
         <text decode="{{true}}">&nbsp;</text>
-        <button class='cu-btn bg-red round shadow sm' bindtap="revision_card" id="{{j}}">
-          <view class='icon-edit text-white'></view>
+        <button class="cu-btn bg-red round shadow sm" bindtap="revision_card" id="{{j}}">
+          <view class="icon-edit text-white"></view>
         </button>
         <text decode="{{true}}">&nbsp;</text>
-        <button class='cu-btn lines-red round shadow sm' bindtap="delete_card" id="{{j}}">
-          <view class='icon-delete text-red'></view>
+        <button class="cu-btn {{change_delete_color}} round shadow sm" bindtap="delete_card" id="{{j}}">
+          <view class="icon-delete {{change_delete_icon_color}}"></view>
         </button>
       </view>
     </view>
